--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
             </div>
         </div>
         <div id="menu-lg">
-            <a href="">
+            <a href="family">
                 <img src="img/01-navbar-a.png" alt="">
             </a>
-            <a href="">
+            <a href="mamapapa">
                 <img src="img/01-navbar-b.png" alt="">
             </a>
-            <a href="">
+            <a href="camp">
                 <img src="img/01-navbar-c.png" alt="">
             </a>
-            <a href="">
+            <a href="buffet">
                 <img src="img/01-navbar-d.png" alt="">
             </a>
         </div>
         <div id="content">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, consectetur quas. Asperiores
-                    exercitationem aliquid ullam dolorum illum porro nam odio corrupti, natus amet, ratione optio sequi
-                    reiciendis sit a? Dicta.</p>
-            </div>
+            <div class="text-content">
+                <p>「宿泊者様専用」大浴場などの設備や充実したサービスで
+                    <br>
+                    ファミリーやグループでゆったりとお過ごしいただけます。
+                </p>
             <!-- FAMILY START -->
             <div id="family">
                 <h2><img src="img/02-famiri-a.png" alt=""></h2>
@@ -57,23 +57,46 @@
                             <!-- Slides -->
                             <div class="swiper-slide family-slide">
                                 <img src="img/01_ファミリー.png" alt="">
-                                <p>A Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="textfamily">
+                                    大空リゾート®からは無料のシャトルバスによる
+                                    <br>
+                                    アクセスも可能です。ホテルに到着したらフロントで
+                                    <br>
+                                    チェックインをお済ませ下さい。
+                                </p>
                             </div>
                             <div class="swiper-slide family-slide">
                                 <img src="img/02_ファミリー.png" alt="">
-                                <p>B Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="textfamily">客室は全室広々設計で、ファミリーやグループみんなで
+                                    <br>
+                                    くつろげます。また、全室がバス・トイレ別で、
+                                    <br>
+                                    洗い場付きのお風呂はお子様がいるファミリーにご好評です。
+                                </p>
                             </div>
                             <div class="swiper-slide family-slide">
                                 <img src="img/03_ファミリー.png" alt="">
-                                <p>C Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="textfamily">館内には、お子様連れのご家族はもちろん、
+                                    <br> さまざまな年代の方が快適に過ごしていただける
+                                    <br>
+                                    施設やサービスをご用意しています。
+                                </p>
                             </div>
                             <div class="swiper-slide family-slide">
                                 <img src="img/04_ファミリー.png" alt="">
-                                <p>D Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="textfamily">ホテルの目の前には市内唯一の総合公園
+                                    <br>
+                                    「浦安市総合公園」があり、海を眺めながら芝生の上で
+                                    <br> 遊んだりくつろいだりできます。
+                                </p>
                             </div>
                             <div class="swiper-slide family-slide">
                                 <img src="img/05_ファミリー.png" alt="">
-                                <p>D Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="textfamily">最上階の7階には、宿泊者限定でご利用できる大浴場を用意。
+                                    <br> 海を一望できる大浴場で、ご家族みんなで癒やされて下さい。
+                                    <br> ※小学1年生以上の方は、
+                                    <br> 男女別のご利用とさせていただきます。
+                                </p>
                             </div>
                         </div>
 
@@ -120,8 +143,12 @@
                             <img src="img/04_ベビー.png" alt="">
                         </div>
                     </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae id porro numquam, cupiditate placeat provident suscipit nulla ipsam, eos blanditiis nobis, labore fugiat rem iste in quae necessitatibus impedit corrupti?</p>
+                    <div class="textmamapapa">
+                        <p>大空ホテルは「ウェルカムベビーのお宿」認定ホテルです。
+                            <br> 全室がバス・トイレ独立型で小さなお子様と
+                            <br> 一緒の宿泊にも安心。認定部屋のプラナフォースルームは
+                            <br> 靴が脱げるお部屋でお子様と一緒にお寛ぎいただけます。
+                        </p>
                     </div>
                     <div class="plank lg">
                         <p class="planktext-a">
@@ -138,7 +165,60 @@
                 </div>
             </div>
             <!-- MAMAPAPA END -->
-            <div id="camp"></div>
+            <div id="camp">
+                <h2><img src="img/04-hoterukamp-a.png" alt=""></h2>
+                <div class="camp-content">
+                    <!-- Slider main container -->
+                    <div class="swiper family-slider">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper family-slider-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide family-slide">
+                                <img src="img/01_キャンプ.png" alt="">
+                                <p class="textcamp">
+                                    キャンプ用品定番のテント、シュラフ（寝袋）、
+                                   <br> キャンプベッドを客室にご用意し、
+                                  <br> お部屋でキャンプの疑似体験をしていただけます。
+                                  <br> さらに、テーブル、チェアなどのアウトドア用品、
+                                  <br> キャンプ気分を盛り上げるルーム用プラネタリウムもご用意しました。
+                                </p>
+                            </div>
+                            <div class="swiper-slide family-slide">
+                                <img src="img/02_キャンプ.png" alt="">
+                            </div>
+                            <div class="swiper-slide family-slide">
+                                <img src="img/03_キャンプ.png" alt="">
+                            </div>
+                            <div class="swiper-slide family-slide">
+                                <img src="img/04_キャンプ.png" alt="">
+                            </div>
+                            <div class="swiper-slide family-slide">
+                                <img src="img/05_キャンプ.png" alt="">
+                            </div>
+                        </div>
+
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                    <div class="plank lg">
+                        <p class="planktext-a">
+                            駐車場無料【最大32時間ステイ】
+                            <br>
+                            15時から翌23時まで滞在できるバルコニー付き客室
+                        </p>
+                        <img src="img/02-famiri-d-plank-button.png" alt="">
+                    </div>
+
+                    <div class="plank lg">
+                        <p class="planktext-a">
+                            駐車場無料【最大32時間ステイ】
+                            <br>
+                            朝5時から翌13時まで滞在できるバルコニー付き客室
+                        </p>
+                        <img src="img/02-famiri-d-plank-button.png" alt="">
+                    </div>
+            </div>
             <div id="buffet"></div>
         </div>
     </div>
