--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             </div>
         </div>
         <div id="menu-lg">
-            <a href="family">
+            <a href="#family">
                 <img src="img/01-navbar-a.png" alt="">
             </a>
-            <a href="mamapapa">
+            <a href="#mamapapa">
                 <img src="img/01-navbar-b.png" alt="">
             </a>
-            <a href="camp">
+            <a href="#camp">
                 <img src="img/01-navbar-c.png" alt="">
             </a>
-            <a href="buffet">
+            <a href="#buffet">
                 <img src="img/01-navbar-d.png" alt="">
             </a>
         </div>
@@ -60,7 +60,8 @@
                                 <p class="textfamily">
                                     大空リゾート®からは無料のシャトルバスによる
                                     <br>
-                                    アクセスも可能です。ホテルに到着したらフロントで
+                                    アクセスも可能です。
+                                   <br> ホテルに到着したらフロントで
                                     <br>
                                     チェックインをお済ませ下さい。
                                 </p>
@@ -165,34 +166,28 @@
                 </div>
             </div>
             <!-- MAMAPAPA END -->
+            <!-- CAMP -->
             <div id="camp">
                 <h2><img src="img/04-hoterukamp-a.png" alt=""></h2>
                 <div class="camp-content">
                     <!-- Slider main container -->
-                    <div class="swiper family-slider">
+                    <div class="swiper camp-slider">
                         <!-- Additional required wrapper -->
-                        <div class="swiper-wrapper family-slider-wrapper">
+                        <div class="swiper-wrapper camp-slider-wrapper">
                             <!-- Slides -->
-                            <div class="swiper-slide family-slide">
+                            <div class="swiper-slide camp-slide">
                                 <img src="img/01_キャンプ.png" alt="">
-                                <p class="textcamp">
-                                    キャンプ用品定番のテント、シュラフ（寝袋）、
-                                   <br> キャンプベッドを客室にご用意し、
-                                  <br> お部屋でキャンプの疑似体験をしていただけます。
-                                  <br> さらに、テーブル、チェアなどのアウトドア用品、
-                                  <br> キャンプ気分を盛り上げるルーム用プラネタリウムもご用意しました。
-                                </p>
                             </div>
-                            <div class="swiper-slide family-slide">
+                            <div class="swiper-slide camp-slide">
                                 <img src="img/02_キャンプ.png" alt="">
                             </div>
-                            <div class="swiper-slide family-slide">
+                            <div class="swiper-slide camp-slide">
                                 <img src="img/03_キャンプ.png" alt="">
                             </div>
-                            <div class="swiper-slide family-slide">
+                            <div class="swiper-slide camp-slide">
                                 <img src="img/04_キャンプ.png" alt="">
                             </div>
-                            <div class="swiper-slide family-slide">
+                            <div class="swiper-slide camp-slide">
                                 <img src="img/05_キャンプ.png" alt="">
                             </div>
                         </div>
@@ -201,31 +196,142 @@
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
+                    <div>
+                        <p class="textcamp">
+                            キャンプ用品定番のテント、シュラフ（寝袋）、
+                           <br> キャンプベッドを客室にご用意し、
+                          <br> お部屋でキャンプの疑似体験をしていただけます。
+                          <br> さらに、テーブル、チェアなどのアウトドア用品、
+                          <br> キャンプ気分を盛り上げるルーム用プラネタリウムもご用意しました。
+                        </p>
+                    </div>
                     <div class="plank lg">
                         <p class="planktext-a">
-                            駐車場無料【最大32時間ステイ】
+                            【キッズ応援！ホテルでキャンプ気分】
+                           <br> お部屋はプライベートテラス付き（72平米）でゆったり◇素泊まり◇
                             <br>
-                            15時から翌23時まで滞在できるバルコニー付き客室
+                                1泊 2名1室 1名あたり	（税込み）￥5,400
+
                         </p>
-                        <img src="img/02-famiri-d-plank-button.png" alt="">
+                        <img src="img/04-hoterukamp-e-button.png" alt="">
                     </div>
 
                     <div class="plank lg">
                         <p class="planktext-a">
-                            駐車場無料【最大32時間ステイ】
+                            キッズ応援！ホテルでキャンプ気分】
+                           <br> お部屋はプライベートテラス付き（72平米）でゆったり◇朝食付き◇
                             <br>
-                            朝5時から翌13時まで滞在できるバルコニー付き客室
+                            1泊 2名1室 1名あたり	（税込み）￥7,160
+
                         </p>
-                        <img src="img/02-famiri-d-plank-button.png" alt="">
+                        <img src="img/04-hoterukamp-e-button.png" alt="">
                     </div>
+            <!-- MAMAPAPA END -->
             </div>
-            <div id="buffet"></div>
+            <!-- BUFFET-->
+            <div id="buffet">
+                <h2><img src="img/05-bufet-a.png" alt=""></h2>
+                <div class="buffet-content">
+                    <!-- Slider main container -->
+                    <div class="swiper buffet-slider">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper buffet-slider-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide buffet-slide">
+                                <img src="img/01_ブフェー.png" alt="">
+                            </div>
+                            <div class="swiper-slide buffet-slide">
+                                <img src="img/02_ブフェー.png" alt="">
+                            </div>
+                            <div class="swiper-slide buffet-slide">
+                                <img src="img/03_ブフェー.png" alt="">
+                            </div>
+                            <div class="swiper-slide buffet-slide">
+                                <img src="img/04_ブフェー.png" alt="">
+                            </div>
+                            <div class="swiper-slide buffet-slide">
+                                <img src="img/05_ブフェー.png" alt="">
+                            </div>
+                        </div>
+
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                    <div>
+                        <p class="textbuffet">
+                            パフォーマンスキッチンでシェフが目の前で仕上げる
+                           <br> 
+                           特製料理が盛りだくさん。ハンバーガーや、お好みの具材を選べる
+                            <br> オムレツもシェフが目の前で焼き上げます。
+                            <br>
+                            <br>
+                            また、お子様に好評のメニューを
+                           <br> そろえたキッズブッフェコーナーもあり、
+                          <br> ご家族みなさまでお楽しみいただけます。
+                        </p>
+                    </div>
+                        <div class="bgbuffettext" >
+                            <img src="img/05-bufet-e-honbunbg1440.png" alt="">
+                            
+                        </div>
+                        <div class="rate">
+                            <img src="img/05-bufet-d-rate.png" alt="">
+                            <h3>
+                                パフォーマンスキッチンの料理のほか、和食、冷製・温製料理、
+                               <br>
+                                サラダバー、スープなどをご用意。品数豊富なホテル自慢の朝食ブッフェをお楽しみください。
+                                <br>
+                                ※状況によりご提供内容が変更する場合があります
+                            </h3>
+                        </div>    
+                        <div class="santa">
+                            <img src="img/05-bufet-d-santa.png" alt="">
+                        </div> 
+                    </div>
+            <!-- MAMAPAPA END -->
+            <div id="bottom">
+                <div class="bottom-content" >
+                    <div class="moon">
+                        <img src="img/06-bottom-b-moonsanta.png" alt="">
+                    </div> 
+                    <div class="kupon" >
+                        <img src="img/06-bottom-b-kupon-button.png" alt="">
+                        <p>
+                            ※クーポン取得ページにてクーポンの使用条件とご利用上の注意をご確認ください。
+                           <br> クーポンには配布期間が設けられています。
+                        </p>
+                    </div>
+                        <div class="jal">
+                            <img src="img/06-bottom-d-jal-button.png" alt="">
+                        </div>
+
+                        <div class="ana">
+                            <img src="img/06-bottom-d-ana-button.png" alt="">
+                        </div>
+
+                        <div class="plankfeet">
+                            <img src="img/06-bottom-b-plank-button.png" alt="">
+                        </div>
+                </div>
+            </div>
+            </div>
         </div>
     </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".swiper", {
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
+
+    <script>
+        var swiper2 = new Swiper2(".swiper2", {
             navigation: {
                 nextEl: ".swiper-button-next",
                 prevEl: ".swiper-button-prev",
