--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         </p>
                         <img src="img/04-hoterukamp-e-button.png" alt="">
                     </div>
-            <!-- MAMAPAPA END -->
+                </div>
             </div>
             <!-- BUFFET-->
             <div id="buffet">
@@ -290,6 +290,7 @@
                         </div> 
                     </div>
             <!-- MAMAPAPA END -->
+            </div>
             <div id="bottom">
                 <div class="bottom-content" >
                     <div class="moon">
@@ -315,8 +316,6 @@
                         </div>
                 </div>
             </div>
-            </div>
-        </div>
     </div>
     
 
@@ -328,10 +327,8 @@
                 prevEl: ".swiper-button-prev",
             },
         });
-    </script>
-
-    <script>
-        var swiper2 = new Swiper2(".swiper2", {
+        
+        var swiper2 = new Swiper(".buffet-slider", {
             navigation: {
                 nextEl: ".swiper-button-next",
                 prevEl: ".swiper-button-prev",
