--- a/index.html
+++ b/index.html
@@ -113,8 +113,23 @@
                         </p>
                         <img src="img/02-famiri-d-plank-button.png" alt="">
                     </div>
-
                     <div class="plank lg">
+                        <p class="planktext-a">
+                            駐車場無料【最大32時間ステイ】
+                            <br>
+                            朝5時から翌13時まで滞在できるバルコニー付き客室
+                        </p>
+                        <img src="img/02-famiri-d-plank-button.png" alt="">
+                    </div>
+                    <div class="plank sp">
+                        <p class="planktext-a">
+                            駐車場無料【最大32時間ステイ】
+                            <br>
+                            15時から翌23時まで滞在できるバルコニー付き客室
+                        </p>
+                        <img src="img/02-famiri-d-plank-button.png" alt="">
+                    </div>
+                    <div class="plank sp">
                         <p class="planktext-a">
                             駐車場無料【最大32時間ステイ】
                             <br>
@@ -161,7 +176,7 @@
                         <p class="planktext-a">
                             家族旅行応援【ウェルカムベビーのお宿】
                         </p>
-                        <img src="img/mamapapabuttonsp.png" alt="">
+                        <img src="img/03-mamapapa-c-ridobutton.png" alt="">
                     </div>
                 </div>
             </div>
@@ -217,6 +232,27 @@
                     </div>
 
                     <div class="plank lg">
+                        <p class="planktext-a">
+                            キッズ応援！ホテルでキャンプ気分】
+                           <br> お部屋はプライベートテラス付き（72平米）でゆったり◇朝食付き◇
+                            <br>
+                            1泊 2名1室 1名あたり	（税込み）￥7,160
+
+                        </p>
+                        <img src="img/04-hoterukamp-e-button.png" alt="">
+                    </div>
+                    <div class="plank sp">
+                        <p class="planktext-a">
+                            【キッズ応援！ホテルでキャンプ気分】
+                           <br> お部屋はプライベートテラス付き（72平米）でゆったり◇素泊まり◇
+                            <br>
+                                1泊 2名1室 1名あたり	（税込み）￥5,400
+
+                        </p>
+                        <img src="img/04-hoterukamp-e-button.png" alt="">
+                    </div>
+
+                    <div class="plank sp">
                         <p class="planktext-a">
                             キッズ応援！ホテルでキャンプ気分】
                            <br> お部屋はプライベートテラス付き（72平米）でゆったり◇朝食付き◇
