--- a/index.html
+++ b/index.html
@@ -363,6 +363,10 @@
                             <div class="plankfeet">
                                 <img src="img/06-bottom-b-plank-button.png" alt="">
                             </div>
+                            <div class="bottomfeetsp">
+                                <img src="img/06-bottom-feetsp.png" alt="">
+                            </div>
+                            </div>
                         </div>
                         <div class="button lg" >
                             <div class="jal">
